...

    List<DeviceComp> deviceListData = newData.deviceList;
    List<Cable> cableListData = newData.cablesList;

    BeritaAcara survey = BeritaAcara(
        location: locationData,
        actType: actTypeData,
        diagnosis: diagnosisData,
        solution: solutionData,
        adminName: adminNameData,
        clientName: clientNameData,
        date: dateData,
        adminSign: adminSignData,
...
        // insert cables
        if (cableListData != null) {
          for (var i = 0; i < cableListData.length; i++) {
            cableListData[i].idSurvey = int.parse(idSurvey);
            Cable cable = Cable(
                idSurvey: int.parse(idSurvey),
                cableType: cableListData[i].cableType,
                cableLength: cableListData[i].cableLength);
            _apiService.createCable(cable).then((isSuccess) {});
          }
        }
        // insert devices
        if (deviceListData != null) {
          for (var i = 0; i < deviceListData.length; i++) {
...
                        FlatButton(
                          key: Key('KeyDateModal'),
                          onPressed: () {
                            _selectDate(context);
                          },
                          child: ListTile(
                              key: Key('keyDateField'),
                              leading: Icon(Icons.date_range),
                              trailing: Icon(Icons.edit),
                              title: Text(
                                "${date.day}-${date.month}-${date.year}",
                                textAlign: TextAlign.left,
                              )),
...
                            },
                            validator: (value) {
                              if (value.isEmpty) {
                                return 'Location Cannot be Empty!';
                              }
                            },
                            key: Key('keyLocation'),
                            decoration: InputDecoration(
                              labelText: 'Location',
                              hintText: 'type the location',
                              isDense: true,
                            ),
                          ),
...
                                  setState(() {
                                    surveyData.actType = newvalue;
                                    _activityTypeValue = null;
                                  });
                                },
                                items: <String>[
                                  'Network / Device Checking',
                                  'Network / Device Installation',
                                  'Network / Device De-Installation',
                                ].map<DropdownMenuItem<String>>((String value) {
                                  return DropdownMenuItem<String>(
                                    value: value,
                                    child: Text(value),
                                  );
...
                            onChanged: (value) {
                              setState(() {
                                diagnosis = value;
                                surveyData.diagnosis = value;
                              });
                            },
                            key: Key('keyDiagnosis'),
                            decoration: InputDecoration(
                              labelText: 'Diagnosis',
                              hintText: 'type diagnosis / problem',
                              isDense: true,
                            ),
                          ),
...
                            onChanged: (value) {
                              setState(() {
                                solution = value;
                                surveyData.solution = value;
                              });
                            },
                            key: Key('keySolution'),
                            decoration: InputDecoration(
                              labelText: 'Solution',
                              hintText: 'type the solution',
                              isDense: true,
                            ),
                          ),
...
                            onChanged: (value) {
                              setState(() {
                                adminName = value;
                                surveyData.adminName = value;
                              });
                            },
                            key: Key('keyAdminName'),
                            decoration: InputDecoration(
                              labelText: 'Admin Name',
                              hintText: 'type admin name',
                              isDense: true,
                            ),
                            validator: (value) {
...
                            onChanged: (value) {
                              setState(() {
                                clientName = value;
                                surveyData.clientName = value;
                              });
                            },
                            key: Key('keyClientName'),
                            decoration: InputDecoration(
                              labelText: 'Client Name',
                              hintText: 'type client name',
                              isDense: true,
                            ),
                            validator: (value) {
...
                  ),

                  Container(
                      padding: EdgeInsets.only(
                          top: 10.0, left: 15.0, right: 15.0, bottom: 10.0),
                      child: MaterialButton(
                        key: Key('submitFormBtn'),
                        height: 45.0,
                        color: Theme.of(context).accentColor,
                        minWidth: double.infinity,
                        child: Text(
                          'Submit',
                          textAlign: TextAlign.center,
...
